20000322-21:10 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
    Missed from previos session
    *doc/en/array.txt
    doc/en/binnum.txt
    doc/en/browse.txt
    doc/en/command.txt
    doc/en/dir.txt
        *Small formating
    *source/rtl/dir.c
        *added test to determine the borland compiler version so
         the _chmod obsolete warning wont appear
    *source/tools/rtf.prg
     source/tools/os2.prg
     source/tools/ng.prg
        *some enhacement
    *utils/hbdoc/genng.prg
     utils/hbdoc/genrtf.prg
     utils/hbdoc/genos2.prg
        +code to generate tables
        +code to support new subtags.
        *some enhacements


20000322-22:30 GMT-3 Luiz Rafael Culik <culik@sl.conex.net>
    *doc/compiler.txt
     doc/gnulice.txt
     doc/harbext.txt
        *Small Changes
     *doc/en/binnum.txt
      doc/en/command.txt
      doc/en/dir.txt
      doc/en/diskspac.txt
      doc/en/dir.txt
      doc/en/terminal.txt
      doc/en/treport.txt
      doc/en/tlable.txt
      doc/en/readme.txt
      doc/en/license.txt
      doc/en/tgetlist.txt
      doc/en/error.txt
        *Small changes
    *utils/hbdoc/genng.prg
     utils/hbdoc/genos2.prg
     utils/hbdoc/genrtf.prg
        !fix code when a Return or Argument is only one line , to add the
         propery tags to enhace the first word


20000322-19:35 EST Paul Tucker <ptucker@sympatico.ca>
   * include/fileio.ch
   * source/rtl/diskspac.c
     * Changed and reordered HB_DISK_ defines to be in the range 0-3
   * source/rtl/dskspac.c
     * cap uiType to HB_DISK_TOTAL for out of range types.
   * doc/en/diskspac.txt
     * updated

2000-03-22 17:25 GMT-5 David G. Holm <dholm@jsd-llc.com>
   + source/rtl/gtpca/kbdos2.gcc
     + Added hb_gt_ReadKey() support for os2/gcc platform
       (I forgot to run CVS ADD on this module earlier)

20000322-22:46 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/hbdefs.h
     - Removed EXTERNAL_LINKAGE macro, it was not used anymore.

   + contrib/hbclip/hbstodx.c