@@ -1,3 +1,9 @@
+20000322-21:55 EST Paul Tucker <ptucker@sympatico.ca>
+   * source/rtl/diskspac.c
+     * accounted for possibility of retrying the operation
+     * (though I didn't activate it - see notes)
+     * optimized some assigns.
+
 20000322-21:10 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
     Missed from previos session
     *doc/en/array.txt
